feat: evm based typing

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,10 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "react": "^18.0.0"
@@ -27,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.2.45",
     "react": "^18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^2.1.5"
   }
 }
