--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "private": true,
     "scripts": {
         "dev": "pnpm --filter playground dev",
-        "build": "pnpm --filter core build && pnpm --filter playground build"
+        "build": "pnpm --filter core build && pnpm --filter playground build",
+        "test": "pnpm --filter core test",
+        "test:watch": "pnpm --filter core test",
+        "test:coverage": "pnpm --filter core test:coverage"
     },
     "devDependencies": {
         "typescript": "^5.3.3"
