--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev": "pnpm --filter playground dev",
         "build": "pnpm --filter core build && pnpm --filter playground build",
         "test": "pnpm --filter core test",
-        "test:watch": "pnpm --filter core test",
+        "test:watch": "pnpm --filter core test:watch",
         "test:coverage": "pnpm --filter core test:coverage"
     },
     "devDependencies": {
