--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,36 +1,46 @@
 {
-  "name": "@cord/core",
-  "version": "0.0.1",
-  "private": true,
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    },
-    "./react": {
-      "types": "./dist/react/index.d.ts",
-      "import": "./dist/react/index.js",
-      "require": "./dist/react/index.js"
-    }
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.45",
-    "react": "^18.2.0",
-    "typescript": "^5.3.3",
-    "vitest": "^2.1.5"
-  }
+	"name": "@terminallyonline/cord",
+	"version": "0.0.0",
+	"description": "A templating language for creating structured, type-safe input forms",
+	"license": "MIT",
+	"scripts": {
+		"build": "tsc",
+		"dev": "tsc --watch",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage",
+    "changeset:publish:": "pnpm build && pnpm changeset publish"
+	},
+	"peerDependencies": {
+		"react": "^18.0.0"
+	},
+	"devDependencies": {
+		"@changesets/cli": "^2.27.10",
+		"@types/react": "^18.2.45",
+		"react": "^18.2.0",
+		"typescript": "^5.3.3",
+		"vitest": "^2.1.5"
+	},
+	"files": [
+		"dist",
+		"README.md"
+	],
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js",
+			"require": "./dist/index.js"
+		},
+		"./react": {
+			"types": "./dist/react/index.d.ts",
+			"import": "./dist/react/index.js",
+			"require": "./dist/react/index.js"
+		}
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
