--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@terminallyonline/cord",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "A templating language for creating structured, type-safe input forms",
 	"license": "MIT",
 	"scripts": {
@@ -8,14 +8,12 @@
 		"dev": "tsc --watch",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage",
-    "changeset:publish:": "pnpm build && pnpm changeset publish"
+		"test:coverage": "vitest run --coverage"
 	},
 	"peerDependencies": {
 		"react": "^18.0.0"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.27.10",
 		"@types/react": "^18.2.45",
 		"react": "^18.2.0",
 		"typescript": "^5.3.3",
