--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "cord",
 	"scripts": {
-		"dev": "pnpm --filter playground dev",
-		"build": "pnpm --filter core build && pnpm --filter playground build",
-		"test": "pnpm --filter core test",
-		"test:watch": "pnpm --filter core test:watch",
-		"test:coverage": "pnpm --filter core test:coverage"
+		"dev": "pnpm --filter @terminallyonline/cord-playground dev",
+		"build": "pnpm --filter @terminallyonline/cord build && pnpm --filter @terminallyonline/cord-playground build",
+		"test": "pnpm --filter @terminallyonline/cord test",
+		"test:watch": "pnpm --filter @terminallyonline/cord test:watch",
+		"test:coverage": "pnpm --filter @terminallyonline/cord test:coverage"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.10",
