--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
               id: changesets
               uses: changesets/action@v1
               with:
-                  publish: pnpm build && pnpm changeset publish
+                  publish: pnpm changeset publish
                   commit: "chore: version packages"
                   title: "chore: version packages"
               env:
