--- a/packages/core/.npmignore
+++ b/packages/core/.npmignore
@@ -1,4 +1,10 @@
 src/
 *.test.ts
+*.test.tsx
 vitest.config.ts
-tsconfig.json
+tsconfig*.json
+tsconfig.tsbuildinfo
+.turbo
+coverage/
+scripts/
+.changeset/
