--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,23 +35,23 @@
 		"dist",
 		"README.md"
 	],
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js",
-			"require": "./dist/index.js",
-			"default": "./dist/index.js"
+			"types": "./dist/types/index.d.ts",
+			"import": "./dist/esm/index.js",
+			"require": "./dist/cjs/index.js",
+			"default": "./dist/cjs/index.js"
 		},
 		"./react": {
-			"types": "./dist/react/index.d.ts",
-			"import": "./dist/react/index.js",
-			"require": "./dist/react/index.js",
-			"default": "./dist/react/index.js"
+			"types": "./dist/types/react/index.d.ts",
+			"import": "./dist/esm/react/index.js",
+			"require": "./dist/cjs/react/index.js",
+			"default": "./dist/cjs/react/index.js"
 		}
 	},
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/esm/index.js",
+	"types": "./dist/types/index.d.ts",
 	"sideEffects": false,
 	"publishConfig": {
 		"access": "public"
