--- a/packages/core/tsconfig.esm.json
+++ b/packages/core/tsconfig.esm.json
@@ -1,9 +1,7 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "ESNext",
 		"outDir": "./dist/esm",
-		"declaration": false,
-		"declarationMap": false
+		"declarationDir": "./dist/types"
 	}
 }
