--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,7 +6,8 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"outDir": "./dist",
+		"outDir": "./dist/cjs",
+		"module": "ES2022",
 		"rootDir": "./src",
 		"declaration": true,
 		"declarationMap": true,
