--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,13 +2,13 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"moduleResolution": "bundler",
+		"module": "ESNext",
+		"outDir": "./dist/esm",
+		"rootDir": "./src",
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"outDir": "./dist/cjs",
-		"module": "ES2022",
-		"rootDir": "./src",
 		"declaration": true,
 		"declarationMap": true,
 		"sourceMap": true,
