--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,21 +14,15 @@
 	"type": "module",
 	"scripts": {
 		"build": "rm -rf dist && pnpm build:esm && pnpm build:cjs && pnpm build:types",
-		"build:esm": "tsc --project tsconfig.build.json",
-		"build:cjs": "esbuild 'src/**/*.ts' 'src/**/*.tsx' --outdir=dist/cjs --format=cjs --platform=node --target=node18 --outbase=src --bundle --external:react --external:react-dom --jsx=automatic",
-		"build:types": "tsc --project tsconfig.build.json --emitDeclarationOnly --declarationDir dist/types",
+		"build:esm": "tsc --project tsconfig.json",
+		"build:cjs": "esbuild 'src/**/*.ts' 'src/**/*.tsx' --outdir=dist/cjs --format=cjs --platform=node --target=node18 --outbase=src --bundle",
+		"build:types": "tsc --project tsconfig.json --emitDeclarationOnly --declarationDir dist/types",
 		"dev": "tsc --watch",
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage"
 	},
-	"peerDependencies": {
-		"react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-		"react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
-	},
 	"devDependencies": {
-		"@types/react": "^18.2.45",
-		"react": "^18.2.0",
 		"typescript": "^5.3.3",
 		"vitest": "^2.1.5",
 		"esbuild": "^0.20.0"
@@ -49,9 +43,6 @@
 		"*": {
 			"*": [
 				"./dist/types/*"
-			],
-			"react": [
-				"./dist/types/react/index.d.ts"
 			]
 		}
 	},
@@ -68,7 +59,6 @@
 		"validation",
 		"ethereum",
 		"blockchain",
-		"typescript",
-		"react"
+		"typescript"
 	]
 }
