--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,9 +14,9 @@
 	"type": "module",
 	"scripts": {
 		"build": "rm -rf dist && pnpm build:esm && pnpm build:cjs && pnpm build:types",
-		"build:esm": "tsc --project tsconfig.json",
-		"build:cjs": "esbuild 'src/**/*.ts' 'src/**/*.tsx' --outdir=dist/cjs --format=cjs --platform=node --target=node18 --outbase=src --bundle",
-		"build:types": "tsc --project tsconfig.json --emitDeclarationOnly --declarationDir dist/types",
+		"build:esm": "esbuild 'src/**/*.ts' 'src/**/*.tsx' --outdir=dist/esm --format=esm --platform=node --target=node18 --outbase=src --bundle --external:react --external:react-dom --jsx=automatic",
+		"build:cjs": "esbuild 'src/**/*.ts' 'src/**/*.tsx' --outdir=dist/cjs --format=cjs --platform=node --target=node18 --outbase=src --bundle --external:react --external:react-dom --jsx=automatic",
+		"build:types": "tsc --project tsconfig.build.json --emitDeclarationOnly --declarationDir dist/types",
 		"dev": "tsc --watch",
 		"test": "vitest run",
 		"test:watch": "vitest",
@@ -35,8 +35,7 @@
 		".": {
 			"types": "./dist/types/index.d.ts",
 			"import": "./dist/esm/index.js",
-			"require": "./dist/cjs/index.js",
-			"default": "./dist/cjs/index.js"
+			"require": "./dist/cjs/index.js"
 		}
 	},
 	"typesVersions": {
